<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Editar_perfil">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_pai"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/default_layout_padding">

            <android.support.design.widget.TextInputLayout
                style="@style/styleTextImputLayout"
                app:hintTextAppearance="@style/styleTextTextImputLayout">

                <EditText
                    android:id="@+id/edtName"
                    style="@style/etStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_full_name"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/styleTextImputLayout"
                app:hintTextAppearance="@style/styleTextTextImputLayout">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/etStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/styleTextImputLayout"
                app:hintTextAppearance="@style/styleTextTextImputLayout">

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/etStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/styleTextImputLayout"
                app:hintTextAppearance="@style/styleTextTextImputLayout">

                <EditText
                    android:id="@+id/edtCpf"
                    style="@style/etStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cpf"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        app:hintTextAppearance="@style/styleTextTextImputLayout">

                        <EditText
                            android:id="@+id/etCep"
                            style="@style/etStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_cep"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        app:hintTextAppearance="@style/styleTextTextImputLayout">

                        <EditText
                            style="@style/etStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_number_house"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/styleTextImputLayout"
                    app:hintTextAppearance="@style/styleTextTextImputLayout">

                    <EditText
                        android:id="@+id/labelComplements"
                        style="@style/etStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_complementes"
                        android:inputType="textCapSentences" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/labelEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/finishSignin"
                style="@style/btnStyleLogin"
                android:text="Salvar" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>