<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  *                                     /@
  ~  *                      __        __   /\/
  ~  *                     /==\      /  \_/\/
  ~  *                   /======\    \/\__ \__
  ~  *                 /==/\  /\==\    /\_|__ \
  ~  *              /==/    ||    \=\ / / / /_/
  ~  *            /=/    /\ || /\   \=\/ /
  ~  *         /===/   /   \||/   \   \===\
  ~  *       /===/   /_________________ \===\
  ~  *    /====/   / |                /  \====\
  ~  *  /====/   /   |  _________    /      \===\
  ~  *  /==/   /     | /   /  \ / / /         /===/
  ~  * |===| /       |/   /____/ / /         /===/
  ~  *  \==\             /\   / / /          /===/
  ~  *  \===\__    \    /  \ / / /   /      /===/   ____                    __  _         __  __                __
  ~  *    \==\ \    \\ /____/   /_\ //     /===/   / __ \__  ______  ____ _/ /_(_)____   / / / /__  ____ ______/ /_
  ~  *    \===\ \   \\\\\\\/   ///////     /===/  / / / / / / / __ \/ __ `/ __/ / ___/  / /_/ / _ \/ __ `/ ___/ __/
  ~  *      \==\/     \\\\/ / //////       /==/  / /_/ / /_/ / / / / /_/ / /_/ / /__   / __  /  __/ /_/ / /  / /_
  ~  *      \==\     _ \\/ / /////        |==/   \___\_\__,_/_/ /_/\__,_/\__/_/\___/  /_/ /_/\___/\__,_/_/   \__/
  ~  *        \==\  / \ / / ///          /===/
  ~  *        \==\ /   / / /________/    /==/
  ~  *          \==\  /               | /==/
  ~  *          \=\  /________________|/=/
  ~  *            \==\     _____     /==/
  ~  *           / \===\   \   /   /===/
  ~  *          / / /\===\  \_/  /===/
  ~  *         / / /   \====\ /====/
  ~  *        / / /      \===|===/
  ~  *        |/_/         \===/
  ~  *                       =
  ~  *
  ~  * Copyright(c) Developed by John Alves at 2018/11/4 at 10:26:1 for quantic heart studios
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/sv_pai"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/default_layout_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/label_recover_password_title"
                android:textColor="@color/ColorText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_recover_password_subtitle"
                android:textColor="@color/ColorText"
                android:textSize="13sp" />

            <android.support.design.widget.TextInputLayout
                style="@style/styleTextImputLayout"
                app:hintTextAppearance="@style/styleTextTextImputLayout">

                <EditText
                    android:id="@+id/edtLogin"
                    style="@style/etStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textCapCharacters" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnRecovery"
                style="@style/btnStyleLogin"
                android:text="@string/label_btn_recover_password" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>



