<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/default_layout_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <android.support.design.widget.TextInputLayout
            style="@style/styleTextImputLayout"
            app:hintTextAppearance="@style/styleTextTextImputLayout">

            <EditText
                android:id="@+id/titulo"
                style="@style/etStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/styleTextImputLayout"
            app:hintTextAppearance="@style/styleTextTextImputLayout">

            <EditText
                android:id="@+id/ingredients"
                style="@style/etStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredientes"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            style="@style/styleTextImputLayout"
            app:hintTextAppearance="@style/styleTextTextImputLayout">

            <EditText
                android:id="@+id/preparo"
                style="@style/etStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/preparo"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/photo_camera" />
        />

        <android.support.design.widget.TextInputLayout
            style="@style/styleTextImputLayout"
            app:hintTextAppearance="@style/styleTextTextImputLayout">

            <EditText
                android:maxLength="255"
                android:id="@+id/foto"
                style="@style/etStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Url da foto"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/finishSignin"
            style="@style/btnStyleLogin"
            android:text="Salvar" />

    </LinearLayout>




</android.support.constraint.ConstraintLayout>