<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  *                                     /@
  ~  *                      __        __   /\/
  ~  *                     /==\      /  \_/\/
  ~  *                   /======\    \/\__ \__
  ~  *                 /==/\  /\==\    /\_|__ \
  ~  *              /==/    ||    \=\ / / / /_/
  ~  *            /=/    /\ || /\   \=\/ /
  ~  *         /===/   /   \||/   \   \===\
  ~  *       /===/   /_________________ \===\
  ~  *    /====/   / |                /  \====\
  ~  *  /====/   /   |  _________    /      \===\
  ~  *  /==/   /     | /   /  \ / / /         /===/
  ~  * |===| /       |/   /____/ / /         /===/
  ~  *  \==\             /\   / / /          /===/
  ~  *  \===\__    \    /  \ / / /   /      /===/   ____                    __  _         __  __                __
  ~  *    \==\ \    \\ /____/   /_\ //     /===/   / __ \__  ______  ____ _/ /_(_)____   / / / /__  ____ ______/ /_
  ~  *    \===\ \   \\\\\\\/   ///////     /===/  / / / / / / / __ \/ __ `/ __/ / ___/  / /_/ / _ \/ __ `/ ___/ __/
  ~  *      \==\/     \\\\/ / //////       /==/  / /_/ / /_/ / / / / /_/ / /_/ / /__   / __  /  __/ /_/ / /  / /_
  ~  *      \==\     _ \\/ / /////        |==/   \___\_\__,_/_/ /_/\__,_/\__/_/\___/  /_/ /_/\___/\__,_/_/   \__/
  ~  *        \==\  / \ / / ///          /===/
  ~  *        \==\ /   / / /________/    /==/
  ~  *          \==\  /               | /==/
  ~  *          \=\  /________________|/=/
  ~  *            \==\     _____     /==/
  ~  *           / \===\   \   /   /===/
  ~  *          / / /\===\  \_/  /===/
  ~  *         / / /   \====\ /====/
  ~  *        / / /      \===|===/
  ~  *        |/_/         \===/
  ~  *                       =
  ~  *
  ~  * Copyright(c) Developed by John Alves at 2018/11/4 at 10:37:6 for quantic heart studios
  ~  */
  -->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_pai"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/default_layout_padding">

            <android.support.design.widget.TextInputLayout
                style="@style/styleTextImputLayout"
                app:hintTextAppearance="@style/styleTextTextImputLayout">

                <EditText
                    android:id="@+id/edtName"
                    style="@style/etStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_full_name"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/styleTextImputLayout"
                app:hintTextAppearance="@style/styleTextTextImputLayout">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/etStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/styleTextImputLayout"
                app:hintTextAppearance="@style/styleTextTextImputLayout">

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/etStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/styleTextImputLayout"
                app:hintTextAppearance="@style/styleTextTextImputLayout">

                <EditText
                    android:id="@+id/edtCpf"
                    style="@style/etStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cpf"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        app:hintTextAppearance="@style/styleTextTextImputLayout">

                        <EditText
                            android:id="@+id/etCep"
                            style="@style/etStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_cep"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        app:hintTextAppearance="@style/styleTextTextImputLayout">

                        <EditText
                            style="@style/etStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_number_house"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/styleTextImputLayout"
                    app:hintTextAppearance="@style/styleTextTextImputLayout">

                    <EditText
                        android:id="@+id/labelComplements"
                        style="@style/etStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_complementes"
                        android:inputType="textCapSentences" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/labelEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/lltermos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chbTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ColorText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Leia os"
                    android:textColor="@color/ColorText"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/btnTermsOfUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Termos de uso"
                    android:textColor="@color/ColorText"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat"
                    android:onClick="onClick"

                    />

            </LinearLayout>

            <Button
                android:id="@+id/finishSignin"
                style="@style/btnStyleLogin"
                android:text="Cadastrar-se" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>